--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 <!-- Footer -->
 <div class="footer">
     <div class="footer container">
-        <div class="logo3"><img src="/logo3.png" width="100px"></div>
-        <p>Copyright © 2022 Jaycee V. Capuno. All rights reserved  ❤ </p>
+        <div class="logo3"><img src="logo3.png" width="100px"></div>
+        <p>Copyright &copy; Jaycee V. Capuno. Made with &hearts;</p>
     </div>
 </div>
 </body>
