--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hair Day</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="img/logo.png">
+    <link rel="icon" href="logo.png">
 </head>
 <body>
 <!-- Header -->
     <div class="header">
         <div class="container">
-            <img src="/logo.png" width="120px">
+            <img src="logo.png" width="120px">
             <div class="nav">
                 <ul>
                     <a href="#"><li>Home</li></a>
