--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
             </div>
         </div>
     </div>
-
-
 <!-- Hero -->
 <div class="hero">
     <div class="container">
@@ -35,23 +33,16 @@
         <button class="btn2">Learn More</button>
     </div>
 </div>
-
-
 <!-- Service -->
 <div class="service">
-
-    <h2>Our Service</h2>
-
+    <h2>Our Services</h2>
     <div class="box">
-
         <div class="card">
             <div class="content">
                 <span><i class="fa-solid fa-scissors"></i></span>
                 <h3>Men's Haircut</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad cum numquam, non placeat, eaque aliquid eos, quisquam debitis dicta repudiandae et! Nostrum alias cumque, esse ad porro molestias laboriosam consequuntur!</p>
             </div>
-
-
         </div>
         <div class="card">
             <div class="content">
@@ -59,8 +50,6 @@
                 <h3>Nail's Cut</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad cum numquam, non placeat, eaque aliquid eos, quisquam debitis dicta repudiandae et! Nostrum alias cumque, esse ad porro molestias laboriosam consequuntur!</p>
             </div>
-
-
         </div>
         <div class="card">
             <div class="content">
@@ -68,8 +57,6 @@
                 <h3>Body Massage</h3>
                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad cum numquam, non placeat, eaque aliquid eos, quisquam debitis dicta repudiandae et! Nostrum alias cumque, esse ad porro molestias laboriosam consequuntur!</p>
             </div>
-
-
         </div>
     </div>
 </div>
