--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!-- Header -->
     <div class="header">
         <div class="container">
-            <img class="hlogo" src="logo.png" width="120px">
+            <img src="logo.png" width="120px">
             <div class="nav">
                 <ul>
                     <a href="#"><li>Home</li></a>
